--- a/index.html
+++ b/index.html
@@ -1,54 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>
       The Metric Times. Your source of performance antipattern test pages since
       2022! WebPageTest's Performance AntiPattern Test Page
     </title>
     <meta name="Description" content="WebPageTest Recipe Testing Page" />
     <!-- <meta name="viewport" content="width=device-width" /> -->
-    <!-- <link
+    <link
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto&family=Merriweather:wght@300;700"
       rel="stylesheet"
-    /> -->
+    />
     <link rel="stylesheet" href="site.css" />
     <script src="site.js"></script>
     <script src="site2.js"></script>
     <script src="site3.js" defer></script>
-    <!-- <script
+    <script
       src="https://code.jquery.com/jquery-2.0.0.js"
       crossorigin="anonymous"
-    ></script> -->
-
-    <!-- <script src="http://example.com/this-will-fail.js"></script> -->
-    <!-- <link
+    ></script>
+    <script src="http://example.com/this-will-fail.js"></script>
+    <link
       rel="stylesheet"
       href="https://code.jquery.com/ui/1.13.0-rc.3/themes/smoothness/jquery-ui.css"
-    /> -->
-    <!-- <link rel="preload" href="foo/bar/baz.css" as="style" /> -->
+    />
+    <link rel="preload" href="foo/bar/baz.css" as="style" />
     <link
       rel="apple-touch-icon"
       sizes="96x96"
-      href="./assets/images/favicon-96x96.png"
+      href="/assets/images/favicon-96x96.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="96x96"
-      href="./assets/images/favicon-96x96.png"
+      href="/assets/images/favicon-96x96.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./assets/images/favicon-32x32.png"
+      href="/assets/images/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="./assets/images/favicon-16x16.png"
+      href="/assets/images/favicon-16x16.png"
     />
   </head>
 
@@ -60,7 +59,6 @@
         wptframe.style.width = "289px";
         wptframe.style.height = "102px";
         wptframe.loading = "lazy";
-        wptframe.title = 'www.example.com'
         // Change the URL below to the one you want to load content from
         wptframe.src = "https://example.com ";
         document.querySelector("#wptsnippet").after(wptframe);
@@ -105,17 +103,7 @@
         <h1>
           Pageload Delays Triple when Developers Forget to Check WebPageTest
         </h1>
-        <img
-          src="./images/dog.webp"
-          srcset="
-            ./images/dog.webp            2000w,
-            ./images/dog-1640w-703w.webp 1640w,
-            ./images/dog-1180w-506w.webp 1180w,
-            ./images/dog-270w-116w.webp   270w
-          "
-          sizes="(min-width: 960px) 58.48vw, 90vw"
-          alt="dog"
-        />
+        <img src="dog.jpg" loading="lazy" />
         <p>
           Users are alarmed by increased webpage loading times, noting that
           helpful tools are "literally right here." <a href="#">Full Story</a>
@@ -124,11 +112,11 @@
       <section class="headlines-secondary">
         <article>
           <h2>JavaScript Frameworks Forecast Imminent First Input Delay</h2>
-          <img src="./images/delays.webp" alt="delays" />
+          <img src="delays.jpg" alt="" />
         </article>
         <article>
           <h2>Service Workers Respond as Requests Increasingly Mount</h2>
-          <img src="./images/serviceworkers.webp" importance="low" alt="serviceworkers" />
+          <img src="serviceworkers.jpg" importance="low" alt="" />
         </article>
       </section>
     </main>
@@ -140,31 +128,16 @@
           Users are alarmed by increased webpage loading times, noting that
           helpful tools are "literally right here." <a href="#">Full Story</a>
         </p>
-        <img
-          src="./images/dog.webp?again"
-          srcset="
-            ./images/dog.webp            2000w,
-            ./images/dog-1640w-703w.webp 1640w,
-            ./images/dog-1180w-506w.webp 1180w,
-            ./images/dog-270w-116w.webp   270w
-          "
-          sizes="(min-width: 960px) 58.48vw, 90vw"
-          alt="dog"
-
-        />
+        <img src="dog.jpg?again" />
       </section>
       <section class="headlines-secondary">
         <article>
           <h2>Framework Developers Remind Users To Hydrate</h2>
-          <img src="./images/delays.webp?again" alt="delays" />
+          <img src="delays.jpg?again" alt="" />
         </article>
         <article>
           <h2>Service Workers Handling Requests Beautifully</h2>
-          <img
-            src="./images/serviceworkers.webp?again"
-            importance="low"
-            alt="service workers"
-          />
+          <img src="serviceworkers.jpg?again" importance="low" alt="" />
         </article>
       </section>
     </div>
@@ -178,15 +151,9 @@
       }
 
       // Call the blocking function
-      // blockMainThread();
+      blockMainThread();
     </script>
 
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
-      integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
     <script>
       setTimeout(function () {
         jQuery("#holder").html(
@@ -194,20 +161,8 @@
         );
       }, 1000);
     </script>
-    <!-- <script src="https://unpkg.com/react/umd/react.development.js"></script> -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/react/18.2.0/umd/react.production.min.js"
-      integrity="sha512-8Q6Y9XnTbOE+JNvjBQwJ2H8S+UV4uA6hiRykhdtIyDYZ2TprdNmWOUaKdGzOhyr4dCyk287OejbPvwl7lrfqrQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <!-- <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script> -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.production.min.js"
-      integrity="sha512-MOCpqoRoisCTwJ8vQQiciZv0qcpROCidek3GTFS6KTk2+y7munJIlKCVkFCYY+p3ErYFXCjmFjnfTTRSC1OHWQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
+    <script src="https://unpkg.com/react/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
     <script id="rendered-js">
       const root = ReactDOM.createRoot(document.getElementById("react"));
       root.render(
