remove blockmain thread

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       }
 
       // Call the blocking function
-      blockMainThread();
+      // blockMainThread();
     </script>
 
     <script>
