--- a/finalfolder/index.html
+++ b/finalfolder/index.html
@@ -1,52 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
       The Metric Times. Your source of performance antipattern test pages since
       2022! WebPageTest's Performance AntiPattern Test Page
     </title>
     <meta name="Description" content="WebPageTest Recipe Testing Page" />
     <!-- <meta name="viewport" content="width=device-width" /> -->
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto&family=Merriweather:wght@300;700"
       rel="stylesheet"
-    />
+    /> -->
     <link rel="stylesheet" href="site.css" />
     <script src="site.js"></script>
     <script src="site2.js"></script>
     <script src="site3.js" defer></script>
-    <script
+    <!-- <script
       src="https://code.jquery.com/jquery-2.0.0.js"
       crossorigin="anonymous"
-    ></script>
-    <script src="http://example.com/this-will-fail.js"></script>
-    <link
+    ></script> -->
+
+    <!-- <script src="http://example.com/this-will-fail.js"></script> -->
+    <!-- <link
       rel="stylesheet"
       href="https://code.jquery.com/ui/1.13.0-rc.3/themes/smoothness/jquery-ui.css"
-    />
+    /> -->
+    <!-- <link rel="preload" href="foo/bar/baz.css" as="style" /> -->
     <link
       rel="apple-touch-icon"
       sizes="96x96"
-      href="/assets/images/favicon-96x96.png"
+      href="./assets/images/favicon-96x96.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="96x96"
-      href="/assets/images/favicon-96x96.png"
+      href="./assets/images/favicon-96x96.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/assets/images/favicon-32x32.png"
+      href="./assets/images/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/assets/images/favicon-16x16.png"
+      href="./assets/images/favicon-16x16.png"
     />
   </head>
 
@@ -58,6 +60,7 @@
         wptframe.style.width = "289px";
         wptframe.style.height = "102px";
         wptframe.loading = "lazy";
+        wptframe.title = 'www.example.com'
         // Change the URL below to the one you want to load content from
         wptframe.src = "https://example.com ";
         document.querySelector("#wptsnippet").after(wptframe);
@@ -102,7 +105,17 @@
         <h1>
           Pageload Delays Triple when Developers Forget to Check WebPageTest
         </h1>
-        <img src="dog.jpg" loading="lazy" />
+        <img
+          src="./images/dog.webp"
+          srcset="
+            ./images/dog.webp            2000w,
+            ./images/dog-1640w-703w.webp 1640w,
+            ./images/dog-1180w-506w.webp 1180w,
+            ./images/dog-270w-116w.webp   270w
+          "
+          sizes="(min-width: 960px) 58.48vw, 90vw"
+          alt="dog"
+        />
         <p>
           Users are alarmed by increased webpage loading times, noting that
           helpful tools are "literally right here." <a href="#">Full Story</a>
@@ -111,11 +124,11 @@
       <section class="headlines-secondary">
         <article>
           <h2>JavaScript Frameworks Forecast Imminent First Input Delay</h2>
-          <img src="delays.jpg" alt="" />
+          <img src="./images/delays.webp" alt="delays" />
         </article>
         <article>
           <h2>Service Workers Respond as Requests Increasingly Mount</h2>
-          <img src="serviceworkers.jpg" importance="low" alt="" />
+          <img src="./images/serviceworkers.webp" importance="low" alt="serviceworkers" />
         </article>
       </section>
     </main>
@@ -127,16 +140,31 @@
           Users are alarmed by increased webpage loading times, noting that
           helpful tools are "literally right here." <a href="#">Full Story</a>
         </p>
-        <img src="/images/dog.webp" />
+        <img
+          src="./images/dog.webp?again"
+          srcset="
+            ./images/dog.webp            2000w,
+            ./images/dog-1640w-703w.webp 1640w,
+            ./images/dog-1180w-506w.webp 1180w,
+            ./images/dog-270w-116w.webp   270w
+          "
+          sizes="(min-width: 960px) 58.48vw, 90vw"
+          alt="dog"
+
+        />
       </section>
       <section class="headlines-secondary">
         <article>
           <h2>Framework Developers Remind Users To Hydrate</h2>
-          <img src="/images/delays.webp" alt="" />
+          <img src="./images/delays.webp?again" alt="delays" />
         </article>
         <article>
           <h2>Service Workers Handling Requests Beautifully</h2>
-          <img src="/images/serviceworkers.webp" importance="low" alt="" />
+          <img
+            src="./images/serviceworkers.webp?again"
+            importance="low"
+            alt="service workers"
+          />
         </article>
       </section>
     </div>
@@ -153,6 +181,12 @@
       // blockMainThread();
     </script>
 
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+      integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script>
       setTimeout(function () {
         jQuery("#holder").html(
@@ -160,8 +194,20 @@
         );
       }, 1000);
     </script>
-    <script src="https://unpkg.com/react/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
+    <!-- <script src="https://unpkg.com/react/umd/react.development.js"></script> -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/react/18.2.0/umd/react.production.min.js"
+      integrity="sha512-8Q6Y9XnTbOE+JNvjBQwJ2H8S+UV4uA6hiRykhdtIyDYZ2TprdNmWOUaKdGzOhyr4dCyk287OejbPvwl7lrfqrQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <!-- <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script> -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.production.min.js"
+      integrity="sha512-MOCpqoRoisCTwJ8vQQiciZv0qcpROCidek3GTFS6KTk2+y7munJIlKCVkFCYY+p3ErYFXCjmFjnfTTRSC1OHWQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script id="rendered-js">
       const root = ReactDOM.createRoot(document.getElementById("react"));
       root.render(
