add webp converted dog images

--- a/index.html
+++ b/index.html
@@ -127,7 +127,15 @@
           Users are alarmed by increased webpage loading times, noting that
           helpful tools are "literally right here." <a href="#">Full Story</a>
         </p>
-        <img src="/images/dog.webp" />
+        <img
+          src="./images/dog.webp"
+          srcset="
+            ./images/dog.webp            2000w,
+            ./images/dog-1640w-703w.webp 1640w,
+            ./images/dog-1180w-506w.webp 1180w,
+            ./images/dog-270w-116w.webp   270w
+          "
+        />
       </section>
       <section class="headlines-secondary">
         <article>
