add sizes for all the images

--- a/index.html
+++ b/index.html
@@ -140,11 +140,27 @@
       <section class="headlines-secondary">
         <article>
           <h2>Framework Developers Remind Users To Hydrate</h2>
-          <img src="/images/delays.webp" alt="" />
+          <img
+            src="./images/delays.webp"
+            srcset="
+              ./images/delays.webp            2000w,
+              ./images/delays-1640w-703w.webp 1640w,
+              ./images/delays-1180w-506w.webp 1180w,
+              ./images/delays-270w-116w.webp   270w
+            "
+          />
         </article>
         <article>
           <h2>Service Workers Handling Requests Beautifully</h2>
-          <img src="/images/serviceworkers.webp" importance="low" alt="" />
+          <img
+            src="./images/serviceworkers.webp"
+            srcset="
+              ./images/serviceworkers.webp            2000w,
+              ./images/serviceworkers-1640w-703w.webp 1640w,
+              ./images/serviceworkers-1180w-506w.webp 1180w,
+              ./images/serviceworkers-270w-116w.webp   270w
+            "
+          />
         </article>
       </section>
     </div>
