--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <script src="site2.js"></script>
     <script src="site3.js" defer></script>
     <script
-      src="https://code.jquery.com/jquery-2.0.0.js"
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+      integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
       crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     ></script>
     <script src="http://example.com/this-will-fail.js"></script>
     <link
@@ -184,8 +186,18 @@
         );
       }, 1000);
     </script>
-    <script src="https://unpkg.com/react/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/react/19.1.1/cjs/react.production.min.js"
+      integrity="sha512-Fpy3gN6679IxNCKdpQGYyYF/QoXTWctUB5jtb+DipQXBLFzkzCrTbNlZPT3rcuc7ARVPLAQtmFyNOx0h5/7MVA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/19.1.1/cjs/react-dom.production.min.js"
+      integrity="sha512-iTbBPaHNYnlkn+GZ8cJWUJyqcxL49EbnNehu1fA7lcTaucWjtdFfj1F6qQwaGmCQRBOX1vSU8+4EC8aE+I70Ug=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script id="rendered-js">
       const root = ReactDOM.createRoot(document.getElementById("react"));
       root.render(
