--- a/index.html
+++ b/index.html
@@ -115,27 +115,11 @@
       <section class="headlines-secondary">
         <article>
           <h2>JavaScript Frameworks Forecast Imminent First Input Delay</h2>
-          <img
-            src="./images/delays.webp"
-            srcset="
-              ./images/delays.webp            2000w,
-              ./images/delays-1640w-703w.webp 1640w,
-              ./images/delays-1180w-506w.webp 1180w,
-              ./images/delays-270w-116w.webp   270w
-            "
-          />
+          <img src="./images/delays.webp" />
         </article>
         <article>
           <h2>Service Workers Respond as Requests Increasingly Mount</h2>
-          <img
-            src="./images/serviceworkers.webp"
-            srcset="
-              ./images/serviceworkers.webp            2000w,
-              ./images/serviceworkers-1640w-703w.webp 1640w,
-              ./images/serviceworkers-1180w-506w.webp 1180w,
-              ./images/serviceworkers-270w-116w.webp   270w
-            "
-          />
+          <img src="./images/serviceworkers.webp" />
         </article>
       </section>
     </main>
@@ -160,27 +144,11 @@
       <section class="headlines-secondary">
         <article>
           <h2>Framework Developers Remind Users To Hydrate</h2>
-          <img
-            src="./images/delays.webp"
-            srcset="
-              ./images/delays.webp            2000w,
-              ./images/delays-1640w-703w.webp 1640w,
-              ./images/delays-1180w-506w.webp 1180w,
-              ./images/delays-270w-116w.webp   270w
-            "
-          />
+          <img src="./images/delays.webp" />
         </article>
         <article>
           <h2>Service Workers Handling Requests Beautifully</h2>
-          <img
-            src="./images/serviceworkers.webp"
-            srcset="
-              ./images/serviceworkers.webp            2000w,
-              ./images/serviceworkers-1640w-703w.webp 1640w,
-              ./images/serviceworkers-1180w-506w.webp 1180w,
-              ./images/serviceworkers-270w-116w.webp   270w
-            "
-          />
+          <img src="./images/serviceworkers.webp" />
         </article>
       </section>
     </div>
