fix images srcset and sizes

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
             ./images/dog-1180w-506w.webp 1180w,
             ./images/dog-270w-116w.webp   270w
           "
+          sizes="(min-width: 960px) 58.48vw, 90vw"
         />
         <p>
           Users are alarmed by increased webpage loading times, noting that
@@ -139,6 +140,7 @@
             ./images/dog-1180w-506w.webp 1180w,
             ./images/dog-270w-116w.webp   270w
           "
+          sizes="(min-width: 960px) 58.48vw, 90vw"
         />
       </section>
       <section class="headlines-secondary">
