--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </article>
       </section>
     </main>
-    <marquee id="holder"></marquee>
+    <marquee id="holder"><h3>We give up! Several stories will rotate in this carousel because we must include them all on the homepage. <a href="#">Full Story</a><h3> </p></marquee>
     <div class="secondary">
       <section class="headline">
         <h1 id="react">This Text will be replaced with react text</h1>
@@ -167,13 +167,7 @@
       // blockMainThread();
     </script>
 
-    <script>
-      setTimeout(function () {
-        jQuery("#holder").html(
-          '<h3>We give up! Several stories will rotate in this carousel because we must include them all on the homepage. <a href="#">Full Story</a><h3> </p>'
-        );
-      }, 1000);
-    </script>
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/react/19.1.1/cjs/react.production.min.js"
       integrity="sha512-Fpy3gN6679IxNCKdpQGYyYF/QoXTWctUB5jtb+DipQXBLFzkzCrTbNlZPT3rcuc7ARVPLAQtmFyNOx0h5/7MVA=="
